--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,11 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Πτυχιακή εργασία</h1>
 
 <% if user_signed_in? %>
   <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+  <%= link_to 'Edit profile', edit_user_registration_path, method: :get %>
+  <% current_user.canceled_account %>
+<% else %>
+  <%= link_to 'Sign in', user_session_path, method: :get %> or <%= link_to 'Sign up', new_user_registration_path, method: :get %>
 <% end %>
+
+
