--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DissertionRb</title>
+  <title>DissertationRb</title>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
