--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,13 @@
-<h1>Πτυχιακή εργασία</h1>
+<div class="center hero-unit">
+  <h1>Hello</h1>
 
-<% if user_signed_in? %>
-  <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-  <%= link_to 'Edit profile', edit_user_registration_path, method: :get %>
-  <% current_user.canceled_account %>
-<% else %>
-  <%= link_to 'Sign in', user_session_path, method: :get %> or <%= link_to 'Sign up', new_user_registration_path, method: :get %>
-<% end %>
+  <h2>
+  <p>Καλωσήρθατε στην Πτυχιακή εργασία μου</p>
+  </h2>
+  <% unless signed_in? %>
+    <%= link_to 'Sign up', new_user_registration_path, method: :get %>
+  <% end %>
+</div>
+
 
 
