Add css to make layout better

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,6 @@
 <% provide(:title, 'Αρχική Σελίδα') %>
 <div class="center hero-unit">
-  <h1>Αρχική Σελίδα</h1>
-  <h2>
-  <p>Καλωσήρθατε στην Πτυχιακή εργασία μου</p>
-  </h2>
+  <h1>Καλωσήρθατε στην Πτυχιακή εργασία μου</h1>
+  <h2>Αυτή είναι η αρχική σελίδα της Πτυχιακής εργασίας μου!!!</h2>
+  <%= link_to "Εγγραφείτε Τώρα!!", new_user_registration_path, method: :get , class: "btn btn-large btn-primary" %>
 </div>
-
-
-
