--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,16 @@
-<header id="header">
-  <div class="header-top">
-    <div class="container">
-      <%= render 'layouts/secondary_menu' %>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="navbar-inner">
+    <div class="header-top">
+      <div class="container">
+        <%= render 'layouts/secondary_menu' %>
+      </div>
     </div>
   </div>
-  <div class="header-bottom">
-    <div class="container">
-      <%= render 'layouts/main_menu' %>
+  <div class="navbar-inner">
+    <div class="header-bottom">
+      <div class="container">
+        <%= render 'layouts/main_menu' %>
+      </div>
     </div>
   </div>
 </header>
