Put footer inside container div

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <span class="copyright">Πτυχιακή εργασία Καβάσης Βασίλειος 2013-2014</span>
+    <span class="copyright">Πτυχιακή εργασία Βασίλειος Καβάσης 2013-2014</span>
   </small>
   <nav>
     <ul>
