--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,8 +1,8 @@
 <% if @user.folders.count > 0 %>
   <% @user.folders.each do |folder| %>
-    <ul>
-      <li><%= folder.name %></li>
-    </ul>
+    <% if folder.parent_id == nil %>
+      <%= link_to folder.name, folder_path(folder) %>
+    <% end %>
   <% end %>
 <% else %>
   <h4>You have no folders</h4>
