--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,6 +1,5 @@
-        <%= Dir.foreach("#{current_user.username}") do |f| %>
-            <li>
-                <%= link_to f, folders_path(:file => f), :controller => 'folders_controller', :action => 'show' %> <%=link_to "Rename", folders_rename_path(:file => f) %> <%= link_to "Delete", folders_delete_path(:file => f)%>
-            </li>
-        <% end %>
-    <% end %>
+<% if @folder.subfolders %>
+  <% @folder.subfolders.each do |folder| %>
+    <%= link_to folder.name, folder_path(folder) %>
+  <% end %>
+<% end %>
