--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,7 +1,11 @@
 <% if @user.folders.count > 0 %>
   <% @user.folders.each do |folder| %>
-    <% if folder.parent_id == nil %>
-      <%= link_to folder.name, folder_path(folder) %>
+   <% if folder.parent_id == nil %>
+   <li> 
+      <%= link_to folder.name, folder_path(folder) %> |
+      <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
+      <%= link_to "EDIT", edit_folder_path(folder) %>
+    </li>
     <% end %>
   <% end %>
 <% else %>
