When a folder is created, it takes the correct parent_id depending where it was created from. This closes #2

--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -11,5 +11,5 @@
 <% else %>
   <h4>You have no folders</h4>
 <% end %>
-
+<% req = request.fullpath() %>
 <%= link_to "Δημιουργια Φακελου", new_folder_path, :class => "btn btn-large btn-primary" %>
