--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -3,3 +3,5 @@
     <%= link_to folder.name, folder_path(folder) %>
   <% end %>
 <% end %>
+
+<%= link_to "Δημιουργια Φακελου", new_folder_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
