--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,6 +1,6 @@
 <% if @user.folders.count > 0 %>
   <% @user.folders.each do |folder| %>
-   <% if folder.parent_id == nil %>
+   <% if folder.parent_id == 1 %> 
    <li> 
       <%= link_to folder.name, folder_path(folder) %> |
       <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
