--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,3 +1,6 @@
+<h1><%= @folder.name %></h1>
+
+
 <% if @folder.subfolders %>
   <% @folder.subfolders.each do |folder| %>
     <%= link_to folder.name, folder_path(folder) %>
