--- a/app/views/folders/new.html.erb
+++ b/app/views/folders/new.html.erb
@@ -2,9 +2,9 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
     <% if @fid %>
-      <%= f.text_field :parent_id, value: @fid %>
+      <% f.text_field :parent_id, value: @fid %>
     <% else %>
-      <%= f.text_field :parent_id, value: 1 %>
+      <% f.text_field :parent_id, value: 1 %>
     <% end %>
 
   <%= f.submit "Submit" %>
