--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -8,3 +8,4 @@
 <% end %>
 
 <%= link_to "Δημιουργια Φακελου", new_folder_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
+<%= link_to "Δημιουργια Αρχειου", new_archive_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
