--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,7 +1,7 @@
 <% if @user.folders.count > 0 %>
   <% @user.folders.each do |folder| %>
-   <% if folder.parent_id == 1 %> 
-   <li> 
+   <% if folder.parent_id == 1 %>
+   <li>
       <%= link_to folder.name, folder_path(folder) %> |
       <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
       <%= link_to "EDIT", edit_folder_path(folder) %>
@@ -11,12 +11,12 @@
 <% else %>
   <h4>You have no folders</h4>
 <% end %>
-<% @files.each do |file| %>
+<% @archives.each do |archive| %>
   <li>
-    <%= link_to file.name, archive_path(file) %> |
-    <%= link_to "DELETE", file, method: :delete, data: { confirm: "Are you sure ?" } %> |
-    <%= link_to "EDIT", edit_archive_path(file) %>
+    <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
+    <%= link_to "DELETE", archive.folder, method: :delete, data: { confirm: "Are you sure ?" } %> |
+    <%= link_to "EDIT", edit_folder_archive_path(:folder_id, :id) %>
   </li>
 <% end %>
 <%= link_to "Δημιουργια Φακελου", new_folder_path, :class => "btn btn-large btn-primary" %>
-<%= link_to "Δημιουργια Αρχειου", new_archive_path, :class => "btn btn-large btn-primary" %>
+<%= link_to "Δημιουργια Αρχειου", new_folder_archive_path(:folder_id), :class => "btn btn-large btn-primary" %>
