--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,10 +1,9 @@
 <h1><%= @folder.name %></h1>
 
-
 <% if @folder.subfolders %>
   <% @folder.subfolders.each do |folder| %>
     <li>
-    <%= link_to folder.name, folder_path(folder) %> | 
+    <%= link_to folder.name, folder_path(folder) %> |
     <%= link_to "DELETE", folder, method: :delete, data: { confirm: "Are you sure ?" } %> |
     <%= link_to "EDIT", edit_folder_path(folder) %>
     </li>
@@ -12,4 +11,5 @@
 <% end %>
 
 <%= link_to "Δημιουργια Φακελου", new_folder_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
-<%= link_to "Δημιουργια Αρχειου", new_archive_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
+<%= link_to "Δημιουργια Αρχειου", new_folder_archive_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
+
