--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -14,8 +14,8 @@
 <% @archives.each do |archive| %>
   <li>
     <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
-    <%= link_to "DELETE", archive.folder, method: :delete, data: { confirm: "Are you sure ?" } %> |
-    <%= link_to "EDIT", edit_folder_archive_path(:folder_id, :id) %>
+    <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
+    <%= link_to "EDIT", edit_folder_archive_path(archive.folder_id, archive.id) %>
   </li>
 <% end %>
 <%= link_to "Δημιουργια Φακελου", new_folder_path, :class => "btn btn-large btn-primary" %>
