--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,22 +1,25 @@
-<% if @user.folders.count > 0 %>
-  <% @user.folders.each do |folder| %>
-   <% if folder.parent_id == 1 %>
-   <li>
-      <%= link_to folder.name, folder_path(folder) %> |
-      <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
-      <%= link_to "EDIT", edit_folder_path(folder) %>
-    </li>
-    <% end %>
-  <% end %>
-<% else %>
-  <h4>You have no folders</h4>
+<% if @user.folders.count == 0 && @user.archives.count == 0 %>
+  <p><strong>You have no Folders or Files</strong></p>
 <% end %>
-<% @archives.each do |archive| %>
-  <li>
-    <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
-    <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
-    <%= link_to "EDIT", edit_folder_archive_path(archive.folder_id, archive.id) %>
+<% @user.folders.each do |folder| %>
+ <% if folder.parent_id == 1 %>
+ <li>
+    <%= link_to folder.name, folder_path(folder) %> |
+    <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
+    <%= link_to "EDIT", edit_folder_path(folder) %>
   </li>
+  <% end %>
 <% end %>
+
+<% @user.archives.each do |archive| %>
+  <% if archive.folder_id == 1 %>
+    <li>
+      <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
+      <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
+      <%= link_to "EDIT", edit_folder_archive_path(archive.folder_id, archive.id) %>
+    </li>
+  <% end %>
+<% end %>
+
 <%= link_to "Δημιουργια Φακελου", new_folder_path, :class => "btn btn-large btn-primary" %>
 <%= link_to "Δημιουργια Αρχειου", new_folder_archive_path(:folder_id), :class => "btn btn-large btn-primary" %>
