--- a/app/views/archives/show.html.erb
+++ b/app/views/archives/show.html.erb
@@ -3,3 +3,5 @@
 <p>
   <%= @archive.text %>
 </p>
+<br>
+<%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
