--- a/app/views/folders/new.html.erb
+++ b/app/views/folders/new.html.erb
@@ -9,4 +9,6 @@
   <% end %>
 
   <%= f.submit "Submit" %>
+  <br>
+  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
 <% end %>
