--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -21,4 +21,5 @@
 <% end %>
 <%= link_to "Δημιουργια Φακελου", new_folder_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
 <%= link_to "Δημιουργια Αρχειου", new_folder_archive_path(@folder, :fid => @folder.id), :class => "btn btn-large btn-primary" %>
+<%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
 
