--- a/app/views/archives/new.html.erb
+++ b/app/views/archives/new.html.erb
@@ -11,4 +11,6 @@
   <% end %>
 
   <%= f.submit "Submit" %>
+  <br>
+  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
 <% end %>
