--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
   <h1>Καλωσήρθατε στην Πτυχιακή εργασία μου</h1>
   <h2>Αυτή είναι η αρχική σελίδα της Πτυχιακής εργασίας μου!!!</h2>
   <% if user_signed_in? %>
-    <%= link_to "Φακελοι", folders_path, method: :get , class: "btn btn-large btn-primary" %>
+    <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
   <% else %>
     <%= link_to "Εγγραφείτε Τώρα!!", new_user_registration_path, method: :get , class: "btn btn-large btn-primary" %>
   <% end %>
