--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -1,3 +1,5 @@
-<div class="mainNav">
+<div class="secondaryNav-inner pull-left">
   <%= link_to "Πτυχιακή εργασία", root_path, id: "logo" %>
 </div>
+<%= render 'layouts/languages' %>
+
