--- a/app/views/layouts/_secondary_menu.html.erb
+++ b/app/views/layouts/_secondary_menu.html.erb
@@ -3,17 +3,19 @@
     <div class="secondaryNav-inner pull-right">
       <span>
         <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-        |
+        <span style="color:white"> | </span>
         <%= link_to 'Edit profile', edit_user_registration_path, method: :get %>
         <% current_user.canceled_account %>
       </span>
     </div>
   <% else %>
-    <%= render 'layouts/languages' %>
     <div class="secondaryNav-inner  pull-right">
       <span>
-        <%= link_to 'Sign in', user_session_path, method: :get %> or <%= link_to 'Sign up', new_user_registration_path, method: :get %>
+        <%= link_to 'Sign in', user_session_path, method: :get %>
+        <span style="color:white"> or </span>
+        <%= link_to 'Sign up', new_user_registration_path, method: :get %>
       </span>
     </div>
   <% end %>
 </div>
+
