Change buttons and fix error messages

--- a/app/views/archives/edit.html.erb
+++ b/app/views/archives/edit.html.erb
@@ -3,8 +3,7 @@
   <%= f.text_field :name, value: @archive.name %>
   <%= f.label :text %> <br />
   <%= f.text_area :text, value: @archive.text %>
-
-  <%= f.submit "Update"  %>
   <br>
-  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
+  <%= f.submit "Update", class: "btn btn-primary"  %>
+  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-primary" %>
 <% end %>
