--- a/app/views/archives/show.html.erb
+++ b/app/views/archives/show.html.erb
@@ -1,7 +1,6 @@
 <h1><%= @archive.name %></h1>
-
 <p>
   <%= @archive.text %>
 </p>
 <br>
-<%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
+<%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get, class: "btn btn-primary" %>
