--- a/app/views/archives/new.html.erb
+++ b/app/views/archives/new.html.erb
@@ -10,8 +10,7 @@
   <% else %>
     <%= f.hidden_field :folder_id, :value => 1 %>
   <% end %>
-
-  <%= f.submit "Submit" %>
   <br>
-  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
+  <%= f.submit "Submit", class: "btn btn-primary"%>
+  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-primary" %>
 <% end %>
