--- a/app/views/folders/edit.html.erb
+++ b/app/views/folders/edit.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @folder do |f| %>
   <%= f.label :name %> <br />
   <%= f.text_field :name, value: @folder.name %>
-  <%= f.submit "Update it !" %>
   <br>
-  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
+  <%= f.submit "Update it !", class: "btn btn-primary" %>
+  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-primary" %>
 <% end %>
