--- a/app/views/folders/new.html.erb
+++ b/app/views/folders/new.html.erb
@@ -7,8 +7,7 @@
   <% else %>
     <%= f.hidden_field :parent_id, value: 1 %>
   <% end %>
-
-  <%= f.submit "Submit" %>
   <br>
-  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
+  <%= f.submit "Submit", class: "btn btn-primary" %>
+  <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-primary" %>
 <% end %>
