--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <%= render 'layouts/flash_messages' %>
+      <%= render "layouts/flash_messages" %>
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
