--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -2,5 +2,18 @@
   <%= content_tag :div, msg, class: "alert alert-#{name}" %>
 <% end %>
 
+<% if @archive.errors.any? %>
+  <div id="error_explanation">
+    <div class="alert alert-danger">
+      The form contains <%= pluralize(@archive.errors.count, "error") %>.
+    </div>
+    <ul>
+    <% @archive.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 
 
