--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <%= render "layouts/flash_messages" %>
-      <%= yield %>
+<!--       <%= render "layouts/flash_messages" %>
+ -->      <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
   </body>
