Show errors in forms

--- a/app/views/folders/edit.html.erb
+++ b/app/views/folders/edit.html.erb
@@ -1,4 +1,7 @@
 <%= form_for @folder do |f| %>
+
+  <%= render "error_messages" %>
+
   <%= f.label :name %> <br />
   <%= f.text_field :name, value: @folder.name %>
   <br>
