--- a/app/views/archives/edit.html.erb
+++ b/app/views/archives/edit.html.erb
@@ -1,4 +1,8 @@
 <%= form_for @archive, url:folder_archive_path(@archive.folder_id, @archive.id) do |f| %>
+
+  <%= render "error_messages" %>
+
+
   <%= f.label :name %> <br />
   <%= f.text_field :name, value: @archive.name %>
   <%= f.label :text %> <br />
