--- a/app/views/archives/new.html.erb
+++ b/app/views/archives/new.html.erb
@@ -1,6 +1,7 @@
 
 <%= form_for @archive, url:folder_archives_path do |f| %>
-      <%= render 'layouts/flash_messages' %>
+
+  <%= render "error_messages" %>
 
   <%= f.label :name %><br />
   <%= f.text_field :name %>
