Show errors when try to create folder and archive without name, Add 'back' button everywhere

--- a/app/views/archives/new.html.erb
+++ b/app/views/archives/new.html.erb
@@ -16,4 +16,6 @@
   <br>
   <%= f.submit "Submit", class: "btn btn-primary"%>
   <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-primary" %>
+  <%= link_to "back", folder_path(Folder.where(id: @fid).take), class: "btn btn-primary" if @fid %>
+  <%= link_to "back", folders_path, method: :get, class: "btn btn-primary" if !@fid %>
 <% end %>
