--- a/app/views/archives/edit.html.erb
+++ b/app/views/archives/edit.html.erb
@@ -2,7 +2,6 @@
 
   <%= render "error_messages" %>
 
-
   <%= f.label :name %> <br />
   <%= f.text_field :name, value: @archive.name %>
   <%= f.label :text %> <br />
@@ -10,4 +9,7 @@
   <br>
   <%= f.submit "Update", class: "btn btn-primary"  %>
   <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-primary" %>
+  <%= link_to "back", folder_path(Folder.find(@archive.folder_id)), class: "btn btn-primary" if @archive.folder_id != 1 %>
+  <%= link_to "back", folders_path, method: :get, class: "btn btn-primary" if @archive.folder_id == 1 %>
+
 <% end %>
