--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -5,7 +5,7 @@
 <% @user.folders.each do |folder| %>
  <% if folder.parent_id == 1 %>
  <li>
-    <%= link_to folder.name, folder_path(folder) %> |
+    F - <%= link_to folder.name, folder_path(folder) %> |
     <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
     <%= link_to "EDIT", edit_folder_path(folder) %>
   </li>
@@ -15,12 +15,12 @@
 <% @user.archives.each do |archive| %>
   <% if archive.folder_id == 1 %>
     <li>
-      <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
+      A - <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
       <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
       <%= link_to "EDIT", edit_folder_archive_path(archive.folder_id, archive.id) %>
     </li>
   <% end %>
 <% end %>
-
+<br>
 <%= link_to "Δημιουργια Φακελου", new_folder_path, :class => "btn btn-large btn-primary" %>
 <%= link_to "Δημιουργια Αρχειου", new_folder_archive_path(:folder_id), :class => "btn btn-large btn-primary" %>
