--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -3,9 +3,9 @@
 <% if @folder.subfolders %>
   <% @folder.subfolders.each do |folder| %>
     <li>
-    <%= link_to folder.name, folder_path(folder) %> |
-    <%= link_to "DELETE", folder, method: :delete, data: { confirm: "Are you sure ?" } %> |
-    <%= link_to "EDIT", edit_folder_path(folder) %>
+      F - <%= link_to folder.name, folder_path(folder) %> |
+      <%= link_to "DELETE", folder, method: :delete, data: { confirm: "Are you sure ?" } %> |
+      <%= link_to "EDIT", edit_folder_path(folder) %>
     </li>
   <% end %>
 <% end %>
@@ -13,9 +13,9 @@
 <% if @folder.archives %>
   <% @folder.archives.each do |archive| %>
     <li>
-    <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
-    <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
-    <%= link_to "EDIT", edit_folder_archive_path(archive.folder_id, archive.id) %>
+      A - <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
+      <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
+      <%= link_to "EDIT", edit_folder_archive_path(archive.folder_id, archive.id) %>
     </li>
   <% end %>
 <% end %>
@@ -23,4 +23,8 @@
 <%= link_to "Δημιουργια Φακελου", new_folder_path(@folder, :fid => @folder.id), class: "btn btn-primary" %>
 <%= link_to "Δημιουργια Αρχειου", new_folder_archive_path(@folder, :fid => @folder.id), class: "btn btn-primary" %>
 <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get, class: "btn btn-primary" %>
+<%= link_to "back", folder_path(Folder.find(@folder.parent_id)), class: "btn btn-primary" if @folder.parent_id != 1 %>
+<%= link_to "back", folders_path, method: :get, class: "btn btn-primary" if @folder.parent_id == 1 %>
+
+
 
