--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,19 +1,19 @@
-<% if @user.folders.count == 0 && @user.archives.count == 0 %>
+<% if @folders.count == 0 && @user.archives.count == 0 %>
   <p><strong>You have no Folders or Files</strong></p>
 <% end %>
 
-<% @user.folders.each do |folder| %>
- <% if folder.parent_id == 1 %>
- <li>
-    F - <%= link_to folder.name, folder_path(folder) %> |
-    <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
-    <%= link_to "EDIT", edit_folder_path(folder) %>
-  </li>
+<% @folders.each do |folder| %>
+  <% if folder.parent_id == 1000 %>
+    <li>
+      F - <%= link_to folder.name, folder_path(folder) %> |
+      <%= link_to "DELETE", folder, method: :delete, data: { confirm: "You sure?" } %> |
+      <%= link_to "EDIT", edit_folder_path(folder) %>
+    </li>
   <% end %>
 <% end %>
 
-<% @user.archives.each do |archive| %>
-  <% if archive.folder_id == 1 %>
+<% @archives.each do |archive| %>
+  <% if archive.folder_id == 1000 %>
     <li>
       A - <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
       <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
