--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,17 +1,17 @@
 <h1><%= @folder.name %></h1>
 
-<% if @folder.subfolders %>
-  <% @folder.subfolders.each do |folder| %>
+<% if @subfolders %>
+  <% @subfolders.each do |subfolder| %>
     <li>
-      F - <%= link_to folder.name, folder_path(folder) %> |
-      <%= link_to "DELETE", folder, method: :delete, data: { confirm: "Are you sure ?" } %> |
-      <%= link_to "EDIT", edit_folder_path(folder) %>
+      F - <%= link_to subfolder.name, folder_path(subfolder) %> |
+      <%= link_to "DELETE", subfolder, method: :delete, data: { confirm: "Are you sure ?" } %> |
+      <%= link_to "EDIT", edit_folder_path(subfolder) %>
     </li>
   <% end %>
 <% end %>
 
-<% if @folder.archives %>
-  <% @folder.archives.each do |archive| %>
+<% if @archives %>
+  <% @archives.each do |archive| %>
     <li>
       A - <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
       <%= link_to "DELETE", folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "Are you sure ?" } %> |
@@ -23,8 +23,8 @@
 <%= link_to "Δημιουργια Φακελου", new_folder_path(@folder, :fid => @folder.id), class: "btn btn-primary" %>
 <%= link_to "Δημιουργια Αρχειου", new_folder_archive_path(@folder, :fid => @folder.id), class: "btn btn-primary" %>
 <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get, class: "btn btn-primary" %>
-<%= link_to "back", folder_path(Folder.find(@folder.parent_id)), class: "btn btn-primary" if @folder.parent_id != 1 %>
-<%= link_to "back", folders_path, method: :get, class: "btn btn-primary" if @folder.parent_id == 1 %>
+<%= link_to "back", folder_path(Folder.find(@folder.parent_id)), class: "btn btn-primary" if @folder.parent_id != 1000 %>
+<%= link_to "back", folders_path, method: :get, class: "btn btn-primary" if @folder.parent_id == 1000 %>
 
 
 
