--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,9 @@
-<% provide(:title, 'Αρχική Σελίδα') %>
+<% provide(:title, t('home')) %>
 <div class="center hero-unit">
-  <h1>Καλωσήρθατε στην Πτυχιακή εργασία μου</h1>
-  <h2>Αυτή είναι η αρχική σελίδα της Πτυχιακής εργασίας μου!!!</h2>
+  <h1><%= t('welcome_message') %></h1>
   <% if user_signed_in? %>
-    <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get , class: "btn btn-large btn-primary" %>
+    <%= link_to t('folders_archives'), folders_path, method: :get , class: "btn btn-large btn-primary" %>
   <% else %>
-    <%= link_to "Εγγραφείτε Τώρα!!", new_user_registration_path, method: :get , class: "btn btn-large btn-primary" %>
+    <%= link_to t('sign_up'), new_user_registration_path, method: :get , class: "btn btn-large btn-primary" %>
   <% end %>
 </div>
