--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,7 +1,10 @@
-<h2>Change your password</h2>
+<% provide(:title, t('change_password')) %>
+<h2><%= t('change_password') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+
+  <%= render "devise/shared/error_messages" %>
+
   <%= f.hidden_field :reset_password_token %>
 
   <div><%= f.label :password, "New password" %><br />
@@ -10,7 +13,7 @@
   <div><%= f.label :password_confirmation, "Confirm new password" %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Change my password", class: "btn btn-primary" %></div>
+  <div><%= f.submit t('change_password'), class: "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
