--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,14 @@
-<h2>Forgot your password?</h2>
+<% provide(:title, t('new_password')) %>
+<h2><%= t('new_password') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+
+  <%= render "devise/shared/error_messages" %>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Send me reset password instructions", class: "btn btn-primary" %></div>
+  <div><%= f.submit t('reset_password'), class: "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
