--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,9 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<% provide(:title, t('edit_profile')) %>
+<h2><%= t('edit_profile') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+
+  <%= render "devise/shared/error_messages" %>
 
   <div><%= f.label :username %><br />
   <%= f.text_field :username %></div>
@@ -13,16 +15,16 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div><%= f.label :password %> <i><%= t('leave_blank_password') %></i><br />
   <%= f.password_field :password, :autocomplete => "off" %></div>
 
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <div><%= f.label :current_password %> <i><%= t('confirm_current_password') %></i><br />
   <%= f.password_field :current_password %></div>
 
-  <div><%= f.submit "Update", class: "btn btn-primary" %></div>
+  <div><%= f.submit t('update'), class: "btn btn-primary" %></div>
 <% end %>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete , class: "btn btn-danger"%></p>
+<p><%= button_to t('cancel_account'), registration_path(resource_name), :data => { :confirm => "#{t('confirm')}" }, :method => :delete , class: "btn btn-danger"%></p>
