--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,9 @@
-<h2>Sign up</h2>
+<% provide(:title, t('sign_up')) %>
+<h2><%= t('sign_up') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+
+  <%= render "devise/shared/error_messages" %>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
@@ -15,6 +17,6 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up", class: "btn btn-primary" %></div>
+  <div><%= f.submit t('sign_up'), class: "btn btn-primary" %></div>
 <% end %>
 <%= render "devise/shared/links" %>
