--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,12 +1,14 @@
-<h2>Resend unlock instructions</h2>
+<% provide(:title, t('resend_unlock_instructions')) %>
+<h2><%= t('resend_unlock_instructions') %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+
+  <%= render "devise/shared/error_messages" %>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Resend unlock instructions", class: "btn btn-primary" %></div>
+  <div><%= f.submit t('resend_unlock_instructions'), class: "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
