--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer class="footer">
   <small>
-    <span class="copyright">Πτυχιακή εργασία Βασίλειος Καβάσης 2014-2015</span>
+    <span class="copyright"><%= t('copyright') %></span>
   </small>
   <nav>
     <ul>
-      <li><%= link_to "Επικοινωνία", contact_path %></li>
+      <li><%= link_to t('contact'), contact_path %></li>
     </ul>
   </nav>
 </footer>
