--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Επικοινωνία') %>
-<h1>Επικοινωνία</h1>
+<% provide(:title, t('contact')) %>
+<h1><%= t('contact') %></h1>
 <p>
-  Επικοινωνήστε μαζί μου στο email basiliskavasis@gmail.com
+  <%= t('contact_details') %>
 </p>
