--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <li>
   <%= link_to user.username, user_path(user) %>
   <% if user_signed_in? && current_user.admin? && current_user.username != user.username %>
-    | <%= link_to "delete", user, :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+    | <%= link_to t('delete'), user, :data => { :confirm => "#{t('confirm')}" }, :method => :delete %></p>
   <% end %>
 </li>
