Shows the content of an archive inside the editor.

--- a/app/views/archives/show.html.erb
+++ b/app/views/archives/show.html.erb
@@ -1,8 +1,14 @@
 <h1><%= @archive.name %></h1>
-<p>
-  <%= @archive.text %>
-</p>
+
+<%= form_for @archive, url: folder_archives_path  do |f| %>
+<%= f.text_area :text, :id => "editor", :value => @archive.text %>
+<% end %>
 <br>
 <%= link_to "Φάκελοι / Αρχεία", folders_path, method: :get, class: "btn btn-primary" %>
 <%= link_to "back", folder_path(Folder.find(@archive.folder_id)), class: "btn btn-primary" if @archive.folder_id != 1000 %>
 <%= link_to "back", folders_path, method: :get, class: "btn btn-primary" if @archive.folder_id == 1000 %>
+<script type="text/javascript" charset="utf-8">
+$(function(){
+  $('#editor').editable({inlineMode: false})
+});
+</script>
