--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <link href="/assets/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- Basic formatting for image, video, table, code and quote. -->
-    <link href="assets/froala_content.min.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/froala_content.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 
