--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -7,23 +7,26 @@
 
 <% @folders.each do |folder| %>
   <% if folder.parent_id == 1000 %>
-    <li>
-      F - <%= link_to folder.name, folder_path(folder) %> |
+    <div id="draggable" class="folder">
+    <div class="dragme">
+      F - <%= link_to folder.name, folder_path(folder)  %> |
       <%= link_to t('delete'), folder, method: :delete, data: { confirm: "#{t('confirm')}" } %> |
       <%= link_to t('edit'), edit_folder_path(folder) %>
-    </li>
+      </div>
+    </div>
   <% end %>
 <% end %>
 
 <% @archives.each do |archive| %>
   <% if archive.folder_id == 1000 %>
-    <li>
+    <div id="draggable" class="dragme_archive">
       A - <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
       <%= link_to t('delete'), folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "#{t('confirm')}" } %> |
       <%= link_to t('edit'), edit_folder_archive_path(archive.folder_id, archive.id) %>
-    </li>
+    </div>
   <% end %>
 <% end %>
 <br>
 <%= link_to t('new_folder'), new_folder_path, :class => "btn btn-large btn-primary" %>
 <%= link_to t('new_archive'), new_folder_archive_path(:folder_id), :class => "btn btn-large btn-primary" %>
+
