--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -7,20 +7,18 @@
 
 <% @folders.each do |folder| %>
   <% if folder.parent_id == 1000 %>
-    <div id="draggable" class="folder">
-    <div class="dragme">
-      F - <%= link_to folder.name, folder_path(folder)  %> |
+    <div id="draggable">
       <%= link_to t('delete'), folder, method: :delete, data: { confirm: "#{t('confirm')}" } %> |
       <%= link_to t('edit'), edit_folder_path(folder) %>
-      </div>
+      <%= link_to folder.name, folder_path(folder)  %>
     </div>
   <% end %>
 <% end %>
 
 <% @archives.each do |archive| %>
   <% if archive.folder_id == 1000 %>
-    <div id="draggable" class="dragme_archive">
-      A - <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
+    <div id="draggable">
+      <%= link_to archive.name, folder_archive_path(archive.folder_id, archive.id) %> |
       <%= link_to t('delete'), folder_archive_path(archive.folder_id, archive.id), method: :delete, data: { confirm: "#{t('confirm')}" } %> |
       <%= link_to t('edit'), edit_folder_archive_path(archive.folder_id, archive.id) %>
     </div>
@@ -29,4 +27,6 @@
 <br>
 <%= link_to t('new_folder'), new_folder_path, :class => "btn btn-large btn-primary" %>
 <%= link_to t('new_archive'), new_folder_archive_path(:folder_id), :class => "btn btn-large btn-primary" %>
+        <div id="draggable">Drag me</div>
+
 
