Fix new line, Fix remember me position, Admin now can see all files

--- a/app/views/archives/new.html.erb
+++ b/app/views/archives/new.html.erb
@@ -5,7 +5,7 @@
 
   <%= render "shared/error_messages", source: @archive %>
 
-  <%= f.label :name %><br>
+  <%= f.label :name %>
   <%= f.text_field :name %><br><br>
   <%= f.cktext_area :text %>
 
