--- a/app/views/archives/edit.html.erb
+++ b/app/views/archives/edit.html.erb
@@ -5,7 +5,7 @@
 
   <%= render "shared/error_messages", source: @archive %>
 
-  <%= f.label :name %> <br>
+  <%= f.label :name %>
   <%= f.text_field :name, value: @archive.name %><br><br>
   <%= f.cktext_area :text, value: @archive.text %>
 
