--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,11 +7,11 @@
 
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password, :autofocus => true %></div>
+  <div><%= f.label :password, "New password" %>
+  <%= f.password_field :password, :autofocus => true %></div><br />
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div><%= f.label :password_confirmation, "Confirm new password" %>
+  <%= f.password_field :password_confirmation %></div><br />
 
   <div><%= f.submit t('change_password'), class: "btn btn-primary" %></div>
 <% end %>
