Finish with file upload and download

--- a/app/views/archives/show.html.erb
+++ b/app/views/archives/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @archive.name) %>
-<h2><%= @archive.name %></h2>
+<h2>Archive : <%= @archive.name %></h2>
 
 <p>
   <%= @archive.text.html_safe %>
